# ExLabWizard

./: .gitignore  .mcp.json  .pre-commit-config.yaml  DESIGN.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  exlab_wizard.spec  main.py  pyproject.toml
.github/workflows/: build.yml  docs.yml  lims-live.yml  qc.yml
_internal/: README.md
assets/: template_samples.csv
design_specs/: ExLab-Wizard_Design_Spec.md  ExLab-Wizard_Frontend_Spec.md  IMPLEMENTATION_PLAN.md
design_specs/design_spec_sections/: 02_User_Interaction.md  03_Directory_Structure_Convention.md  04_Backend_Architecture.md  05_Template_Format.md  06_Plugin_System.md  07_Sync_and_Database_Integration.md  08_Error_Handling_Principles.md  09_Configuration_File.md  10_README_Generation.md  11_Cache_Folders.md  12_Orchestrator_Mode.md  13_Equipment_to_Orchestrator_Data_Flow.md  15_Distribution.md  16_Logging.md
docs/: .gitignore  Makefile  UX_INTERACTIONS.md  conf.py  index.md  make.bat
docs/plugin_guide/: index.md  ipc_envelope.md  manifest_schema.md  worked_examples.md
docs/source/: conf.py
docs/source/api/: index.rst
docs/source/user_guide/: 03_create_test_run.md  06_settings.md
docs/superpowers/specs/: 2026-05-14-gui-orchestrator-redesign-design.md
docs/user_guide/: 01_create_project.md  02_create_run.md  04_browse.md  05_readme.md  07_orchestrator.md  08_problems.md  index.md
exlab_wizard/: __init__.py  __main__.py  errors.py  paths.py
exlab_wizard/api/: __init__.py  _dependencies.py  app.py  errors.py  events.py  health.py  schemas.py  setup.py
exlab_wizard/api/routers/: __init__.py  browse.py  config.py  operations.py  problems.py  sessions.py  staging.py
exlab_wizard/cache/: __init__.py  creation_writer.py  equipment.py  ingest_writer.py  log_writer.py
exlab_wizard/config/: __init__.py  loader.py  models.py
exlab_wizard/constants/: __init__.py  enums.py  filenames.py  keyring.py  limits.py  patterns.py  schema_versions.py
exlab_wizard/controller/: __init__.py  creation.py  session_store.py  state_machine.py
exlab_wizard/io/: __init__.py  atomic_write.py  json_files.py  yaml_files.py
exlab_wizard/lims/: __init__.py  cache.py  catalogue.py  client.py  keyring_store.py  schemas.py
exlab_wizard/logging/: __init__.py  context.py  format.py  handlers.py  manager.py
exlab_wizard/orchestrator/: __init__.py  _scan.py  cleanup.py  staging_query.py  staging_watcher.py
exlab_wizard/plugins/: __init__.py  base.py  host.py  logger.py  registry.py
exlab_wizard/readme/: __init__.py  generator.py
exlab_wizard/sync/: __init__.py  cleanup.py  nas_client.py  pre_sync_gate.py  queue.py  verifier.py
exlab_wizard/sync/transports/: __init__.py  _run.py  rclone.py  rsync_ssh.py
exlab_wizard/template/: __init__.py  copier_driver.py
exlab_wizard/tray/: __init__.py  autostart.py  dependencies.py  icon.py  main.py  notifications.py  quit_coordinator.py  server_runner.py  status.py  storage_secret.py  window_launcher.py
exlab_wizard/ui/: __init__.py  design.py  equipment_form.py  keyboard.py  mount.py  notifications.py  theme.py
exlab_wizard/ui/client/: folder_feed.py  refresh_coordinator.py
exlab_wizard/ui/components/: __init__.py  banner_stack.py  breadcrumb.py  credential_field.py  file_list.py  metadata_pane.py  mode_badge.py  operations_modal.py  override_badge.py  session_progress.py  status_bar_segment.py  sync_status_icon.py  test_connection_panel.py  test_run_badge.py  travelling_badge.py  tree.py  tree_context_menu.py  validation_summary.py
exlab_wizard/ui/pages/: __init__.py  main.py  problems.py  settings.py  staging.py  templates.py  welcome.py  wizard_equipment.py  wizard_project.py  wizard_run.py
exlab_wizard/utils/: __init__.py  state.py  time.py
exlab_wizard/validator/: __init__.py  engine.py  rules.py
exlab_wizard/window/: __init__.py  main.py  pywebview_app.py
scripts/: build_local.ps1  build_local.sh  generate_screenshots.py  regen_lims_snapshots.sh
src/exlab_wizard/: __init__.py  paths.py
src/exlab_wizard/api/: events.py  health.py
src/exlab_wizard/cache/: creation_writer.py  equipment.py
src/exlab_wizard/constants/: app.py  filenames.py  keyring.py
src/exlab_wizard/orchestrator/: cleanup.py
src/exlab_wizard/plugins/: _worker.py
src/exlab_wizard/sync/: __init__.py  bandwidth.py  verifier.py
src/exlab_wizard/template/: copier_driver.py
src/exlab_wizard/tray/: dependencies.py  main.py
src/exlab_wizard/ui/: design.py  mount.py  theme.py
src/exlab_wizard/validator/: findings.py
src/exlab_wizard/window/: main.py
tests/e2e/: README.md  _prod_app.py  _prod_server.py  _test_app.py  conftest.py  test_flow_00_fresh_install_setup.py  test_flow_00_full_lifecycle.py  test_flow_01_onboarding.py  test_flow_02_project_wizard.py  test_flow_03_experimental_run.py  test_flow_04_test_run.py  test_flow_05_browse_view.py  test_flow_05_browse_view_sync_icons.py  test_flow_06_problems.py  test_flow_07_plugin_input_required.py  test_flow_08_settings.py  test_flow_09_orchestrator.py  test_flow_10_schema_mismatch.py  test_flow_11_crash_recovery.py  test_flow_12_quit_coordinator.py  test_flow_13_keyboard.py  test_flow_14_notifications.py  test_flow_15_websocket_reconnect.py  test_flow_16_add_equipment.py  test_flow_17_picker_step.py  test_flow_18_relay_receive.py  test_flow_19_travelling_badge.py  test_flow_20_file_explorer.py  test_flow_21_stage_ceiling.py  test_flow_22_onboarding_redesign.py  test_flow_23_footer_staging.py  test_flow_24_context_menus.py  test_flow_25_production_main_wiring.py  test_smoke.py  test_ux_documentation.py  ux_catalog.py
tests/e2e/page_objects/: __init__.py  main_page.py  problems_page.py  settings_page.py  (+5 more)
tests/fixtures/: mock_lims.py  stub_rclone.py  stub_rsync.py
tests/integration/: test_creation_json_concurrent_writes.py  test_lims_contract.py  test_lims_integration.py  test_nas_sync.py  test_orchestrator_lifecycle.py  test_pyinstaller_smoke.py  test_schema_major_mismatch.py  test_tray_lifecycle.py  test_tray_window_smoke.py  test_validator_determinism.py
tests/unit/: test_errors.py  test_main.py  test_paths.py
(+170 files in other folders)
